# TilesFST

./: .coveragerc  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.external.yml  docker-compose.prod.yml  docker-compose.yml  project.yaml  pytest.ini
src/backend/: .env.docker  .env.example  Dockerfile  README.md  pyproject.toml
src/backend/app/: main.py
src/backend/app/core/: config.py  deps.py  error_codes.py  exceptions.py  password_validation.py  protected_account.py  request_logging.py  security.py  user_validation.py
src/backend/app/db/: migrations.py  mysql_migrations.py  schema.mysql.sql  schema.sql  seed.py  session.py
src/backend/app/models/: __init__.py  banner.py  base.py  brand.py  tile.py  tile_category.py  tile_spec.py  topic.py  user.py
src/backend/app/repositories/: audit_log_repository.py  banner_repository.py  brand_certificate_repository.py  brand_repository.py  log_repository.py  miniapp_home_repository.py  password_change_repository.py  profile_activity_repository.py  system_settings_repository.py  tile_category_repository.py  tile_repository.py  tile_sku_repository.py  tile_spec_repository.py  topic_repository.py  user_repository.py
src/backend/tests/: test_admin_api_docs.py  test_admin_banners.py  test_admin_brands.py  test_admin_dashboard.py  test_admin_tile_categories.py  test_admin_tile_skus.py  test_admin_users.py  test_auth.py  test_database_config.py  test_object_keys.py  test_password_change.py  test_product_usage_logging.py  test_profile.py  test_system_settings.py  test_tile_specs.py  test_upload_settings.py
(+3343 files in other folders)
